--- a/IntegradorProgramacionII/BusinessRuleLayer/BusinessRuleLayer.csproj
+++ b/IntegradorProgramacionII/BusinessRuleLayer/BusinessRuleLayer.csproj
@@ -46,6 +46,9 @@
     <Compile Include="Classes\Player.cs" />
     <Compile Include="Classes\Ruleta.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
