--- a/IntegradorProgramacionII/PresentationLayer/PresentationLayer.csproj
+++ b/IntegradorProgramacionII/PresentationLayer/PresentationLayer.csproj
@@ -220,6 +220,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Cuenta\ErrorLogin.cshtml" />
     <Content Include="Views\Home\Jugar.cshtml" />
+    <Content Include="Views\Home\Menu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
