--- a/IntegradorProgramacionII/BusinessRuleLayer/BusinessRuleLayer.csproj
+++ b/IntegradorProgramacionII/BusinessRuleLayer/BusinessRuleLayer.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj">
+      <Project>{be17824d-b816-4b38-8edf-abd457e37c7a}</Project>
+      <Name>DataAccessLayer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
