--- a/IntegradorProgramacionII/PresentationLayer/PresentationLayer.csproj
+++ b/IntegradorProgramacionII/PresentationLayer/PresentationLayer.csproj
@@ -221,7 +221,7 @@
     <Content Include="Views\Cuenta\ErrorLogin.cshtml" />
     <Content Include="Views\Home\Jugar.cshtml" />
     <Content Include="Views\Home\Menu.cshtml" />
-    <Content Include="Views\Cuenta\Singup.cshtml" />
+    <Content Include="Views\Cuenta\Signup.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
