--- a/IntegradorProgramacionII/DataAccessLayerTest/App.config
+++ b/IntegradorProgramacionII/DataAccessLayerTest/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="GameModelContainer" connectionString="metadata=res://*/GameModel.csdl|res://*/GameModel.ssdl|res://*/GameModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALUMNO-1307;initial catalog=Game;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GameModelContainer" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=200.42.22.85;initial catalog=IntegradorProgramacion;user id=integrador;password=istea7319;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
