--- a/IntegradorProgramacionII/DataAccessLayer/App.config
+++ b/IntegradorProgramacionII/DataAccessLayer/App.config
@@ -15,6 +15,9 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="GameModelContainer" connectionString="metadata=res://*/GameModel.csdl|res://*/GameModel.ssdl|res://*/GameModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=integrador:istea7319@200.42.22.85\lenorsql;initial catalog=IntegradorProgramacion;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GameModelContainer" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=200.42.22.85;initial catalog=IntegradorProgramacion;user id=integrador;password=istea7319;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
+
+
+<!-- GameModelAll.csdl|res://*/GameModelAll.ssdl|res://*/GameModelAll.msl -->
