--- a/IntegradorProgramacionII/PresentationLayer/Web.config
+++ b/IntegradorProgramacionII/PresentationLayer/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PresentationLayer-20150520191905;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PresentationLayer-20150520191905.mdf" />
+    <add name="GameModelContainer" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=200.42.22.85;initial catalog=IntegradorProgramacion;user id=integrador;password=istea7319;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
