--- a/IntegradorProgramacionII/DataAccessLayerTest/DataAccessLayerTest.csproj
+++ b/IntegradorProgramacionII/DataAccessLayerTest/DataAccessLayerTest.csproj
@@ -54,6 +54,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BusinessRuleLayer\BusinessRuleLayer.csproj">
+      <Project>{3a6b8925-2f1e-451f-9c43-dbc7a1066639}</Project>
+      <Name>BusinessRuleLayer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj">
       <Project>{be17824d-b816-4b38-8edf-abd457e37c7a}</Project>
       <Name>DataAccessLayer</Name>
