--- a/IntegradorProgramacionII/PresentationLayer/PresentationLayer.csproj
+++ b/IntegradorProgramacionII/PresentationLayer/PresentationLayer.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ApuestaViewModel.cs" />
     <Compile Include="Models\CuentaViewModel.cs" />
     <Compile Include="Models\HomeViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
